--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Meteor app for the Beyond Words exhibition",
   "main": "bundle/main.js",
   "dependencies": {
+    "linkifyjs": "^2.0.4",
     "material-ui": "^0.15.1",
     "pseries": "^2.0.0",
     "react": "^15.0.2",
@@ -18,7 +19,8 @@
     "react-dom": "^15.0.2",
     "react-list": "^0.7.18",
     "react-slick": "^0.12.2",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "twit": "^2.2.4"
   },
   "devDependencies": {},
   "scripts": {
