--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-addons-update": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-list": "^0.7.18",
+    "react-masonry-component": "^4.2.1",
     "react-slick": "^0.12.2",
     "react-tap-event-plugin": "^1.0.0",
     "twit": "^2.2.4"
