--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "material-ui": "^0.15.1",
     "moment-timezone": "^0.5.4",
     "pseries": "^2.0.0",
-    "react": "^15.0.2",
+    "react": "^15.2.1",
     "react-addons-create-fragment": "^15.0.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-addons-linked-state-mixin": "^15.0.2",
@@ -17,9 +17,10 @@
     "react-addons-test-utils": "^15.0.2",
     "react-addons-transition-group": "^15.0.2",
     "react-addons-update": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react-dom": "^15.2.1",
     "react-list": "^0.7.18",
     "react-masonry-component": "^4.2.1",
+    "react-mounter": "^1.2.0",
     "react-slick": "^0.12.2",
     "react-tap-event-plugin": "^1.0.0",
     "twit": "^2.2.4"
