--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-mounter": "^1.2.0",
     "react-slick": "^0.12.2",
     "react-tap-event-plugin": "^1.0.0",
+    "slug": "^0.9.1",
     "twit": "^2.2.4"
   },
   "devDependencies": {},
