--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Meteor app for the Beyond Words exhibition",
   "main": "bundle/main.js",
   "dependencies": {
+    "ion-rangeslider": "^2.1.4",
     "linkifyjs": "^2.0.4",
     "material-ui": "^0.15.1",
     "moment-timezone": "^0.5.4",
