--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "linkifyjs": "^2.0.4",
     "material-ui": "^0.15.1",
     "moment-timezone": "^0.5.4",
+    "openseadragon": "^2.2.1",
     "pseries": "^2.0.0",
     "react": "^15.2.1",
     "react-addons-create-fragment": "^15.0.2",
