--- a/package.json
+++ b/package.json
@@ -36,6 +36,82 @@
     "type": "git",
     "url": "git@gitlab.archimedesdigital.io:archimedes/beyond_words.git"
   },
+  "scripts": {
+    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:js:fix": "eslint . --ext .js,.jsx --fix",
+    "lint:css": "stylelint \"imports/**/*.{css,less,scss,sss}\"",
+    "lint:css:fix": "stylelint \"imports/**/*.{css,less,scss,sss}\" --fix",
+    "lint:staged": "lint-staged",
+    "lint": "npm run lint:js",
+    "pretest": "npm run lint",
+    "test": "jest",
+    "test:watch": "npm run test -- --reporter min --watch",
+    "start": "MONGO_URL=mongodb://localhost:27017/beyondWords meteor --settings=./private/settings/production.json"
+  },
+  "cssModules": {
+    "ignorePaths": [
+      "node_modules"
+    ]
+  },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "."
+    ],
+    "moduleNameMapper": {
+      "^meteor/accounts-base": "<rootDir>/imports/mocks/accountsBase.js",
+      "^meteor/alanning:roles": "<rootDir>/imports/mocks/roles.js",
+      "^meteor/aldeed:simple-schema": "<rootDir>/imports/mocks/simpleSchema.js",
+      "^meteor/kadira:dochead": "<rootDir>/imports/mocks/docHead.js",
+      "^meteor/meteor": "<rootDir>/imports/mocks/meteor.js",
+      "^meteor/react-meteor-data": "<rootDir>/imports/mocks/reactMeteorData.js",
+      "^meteor/session": "<rootDir>/imports/mocks/session.js",
+      "^meteor/momentjs:moment": "<rootDir>/imports/mocks/moment.js",
+      "^meteor/edgee:slingshot": "<rootDir>/imports/mocks/slingshot.js",
+      "^meteor/random": "<rootDir>/imports/mocks/random.js"
+    },
+    "setupFiles": [
+      "<rootDir>/imports/mocks/env.js"
+    ],
+    "transform": {
+      ".*": "<rootDir>/node_modules/jest-css-modules"
+    }
+  },
+  "lint-staged": {
+    "*.{md,sh,txt,xml,html,json}": [
+      "editorconfig-tools fix",
+      "git add"
+    ],
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard",
+    "rules": {
+      "string-quotes": "single",
+      "property-no-unknown": [
+        true,
+        {
+          "ignoreProperties": [
+            "composes"
+          ]
+        }
+      ],
+      "selector-pseudo-class-no-unknown": [
+        true,
+        {
+          "ignorePseudoClasses": [
+            "global"
+          ]
+        }
+      ]
+    }
+  },
+  "pre-commit": [
+    "test"
+  ]
   "author": "",
   "license": "MIT"
 }
