--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "meteor-node-stubs": "^0.2.3",
     "modernizr": "^3.3.1",
     "moment-timezone": "^0.5.4",
-    "openseadragon": "^2.2.1",
-    "pseries": "^2.0.0",
     "npm": "^3.10.9",
+    "openseadragon": "^2.2.1",
     "prerender-node": "^2.7.0",
+    "prop-types": "^15.5.10",
     "pseries": "^2.0.0",
     "react": "^15.4.0",
     "react-addons-create-fragment": "^15.0.2",
