update packages, reorganize methods, import layouts for main router

--- a/imports/ui/layouts/ComingSoonHomeLayout/package.json
+++ b/imports/ui/layouts/ComingSoonHomeLayout/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "HeaderCatalog",
+  "name": "ComingSoonHomeLayout",
   "version": "0.0.1",
   "private": true,
-  "main": "./HeaderCatalog.js"
+  "main": "./ComingSoonHomeLayout.js"
 }
