--- a/package.json
+++ b/package.json
@@ -1,94 +1,52 @@
 {
   "name": "beyond_words",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "description": "Meteor app for the Beyond Words exhibition",
   "main": "bundle/main.js",
   "dependencies": {
     "add2calendar": "^1.0.0",
-    "apollo-client": "^0.8.7",
     "apollo-server": "^0.3.3",
     "babel-runtime": "^6.22.0",
     "bcrypt": "^0.8.7",
-    "body-parser": "^1.16.1",
-    "d3": "^4.8.0",
-    "diff": "^3.0.1",
-    "draft-convert": "^1.3.3",
-    "draft-js": "^0.10.0",
-    "draft-js-editor": "^1.7.2",
-    "draft-js-export-html": "^0.5.2",
-    "draft-js-import-html": "^0.2.2",
-    "draft-js-inline-toolbar-plugin": "^2.0.0-beta9",
-    "draft-js-mention-plugin": "^2.0.0-beta9",
-    "draft-js-plugins-editor": "^2.0.0-beta9",
-    "draft-js-richbuttons-plugin": "^1.1.0",
-    "draft-js-side-toolbar-plugin": "^2.0.0-beta9",
-    "draft-js-single-line-plugin": "0.0.1",
-    "express": "^4.14.1",
-    "formsy-material-ui": "^0.6.0",
-    "formsy-react": "^0.19.2",
+    "body-parser": "^1.17.2",
+    "draft-js-inline-toolbar-plugin": "^2.0.0-beta6",
+    "draft-js-mention-plugin": "^2.0.0-beta1",
+    "express": "^4.15.3",
     "gm": "^1.23.0",
-    "graphql": "^0.9.1",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "^0.10.0",
-    "http-proxy-middleware": "^0.17.3",
-    "immutability-helper": "^2.1.2",
-    "immutable": "^3.8.1",
-    "install": "^0.8.2",
+    "graphql": "^0.10.1",
+    "graphql-server-express": "^0.8.0",
+    "graphql-tools": "^1.0.0",
+    "http-proxy-middleware": "^0.17.4",
     "ion-rangeslider": "^2.1.4",
-    "jsdifflib": "^1.1.0",
-    "jsonld": "^0.4.11",
-    "linkifyjs": "^2.0.5",
     "lodash": "^4.17.4",
-    "material-ui": "^0.16.4",
+    "material-ui": "^0.18.3",
     "mdi": "^1.6.50",
     "meteor-node-stubs": "^0.2.3",
-    "modernizr": "^3.3.1",
     "moment-timezone": "^0.5.4",
     "npm": "^3.10.9",
     "openseadragon": "^2.2.1",
     "prerender-node": "^2.7.0",
     "prop-types": "^15.5.10",
     "pseries": "^2.0.0",
-    "react": "^15.4.0",
-    "react-addons-create-fragment": "^15.0.2",
-    "react-addons-css-transition-group": "^15.0.2",
-    "react-addons-linked-state-mixin": "^15.0.2",
-    "react-addons-perf": "^15.0.2",
-    "react-addons-pure-render-mixin": "^15.0.2",
-    "react-addons-test-utils": "^15.0.2",
-    "react-addons-transition-group": "^15.0.2",
-    "react-addons-update": "^15.0.2",
+    "react": "^15.5.4",
+    "react-addons-create-fragment": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
+    "react-addons-linked-state-mixin": "^15.5.2",
+    "react-addons-perf": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.5.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-addons-transition-group": "^15.5.2",
+    "react-addons-update": "^15.5.2",
     "react-autobind": "^1.0.6",
-    "react-bootstrap": "^0.30.8",
-    "react-cookie": "^1.0.4",
-    "react-dnd": "^2.3.0",
-    "react-dnd-html5-backend": "^2.3.0",
-    "react-dom": "^15.4.0",
-    "react-draggable": "^2.2.6",
-    "react-dropzone": "^3.10.0",
-    "react-list": "^0.7.18",
-    "react-masonry-component": "^4.2.2",
+    "react-dom": "^15.5.4",
+    "react-masonry-component": "^5.0.7",
     "react-mounter": "^1.2.0",
-    "react-quill": "^0.4.1",
-    "react-rangeslider": "^1.0.3",
-    "react-rte": "^0.10.1",
-    "react-select": "^1.0.0-rc.1",
-    "react-slick": "^0.12.2",
-    "react-sticky": "^5.0.5",
-    "react-style-proptype": "^3.0.0",
+    "react-slick": "^0.14.11",
     "react-tap-event-plugin": "^2.0.1",
-    "reactcss": "^1.2.2",
-    "shortcode-parser": "0.0.1",
-    "simple-git": "^1.66.0",
-    "simple-react-form": "^1.8.1",
-    "simple-react-form-material-ui": "^1.7.5",
+    "react-transition-group": "^1.2.0",
     "slug": "^0.9.1",
-    "slugify": "^1.0.2",
-    "spawn-sync": "^1.0.15",
     "throttle-debounce": "^1.0.1",
-    "try-thread-sleep": "^1.0.0",
-    "twit": "^2.2.4",
-    "unicode": "^0.6.1"
+    "twit": "^2.2.4"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -113,7 +71,6 @@
     "jest": "^19.0.2",
     "jest-css-modules": "^1.1.0",
     "pre-commit": "^1.2.2",
-    "react-test-renderer": "^15.5.4",
     "sinon": "^2.1.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0"
