fix lint/jest errors, add shared components and packages

--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "babel-runtime": "^6.22.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.17.2",
+    "draft-js": "^0.10.1",
+    "draft-js-export-html": "^0.5.4",
     "draft-js-inline-toolbar-plugin": "^2.0.0-beta6",
     "draft-js-mention-plugin": "^2.0.0-beta1",
+    "draft-js-plugins-editor": "^2.0.0-beta1",
     "express": "^4.15.3",
+    "formsy-react": "^0.19.2",
     "gm": "^1.23.0",
     "graphql": "^0.10.1",
     "graphql-server-express": "^0.8.0",
     "graphql-tools": "^1.0.0",
     "http-proxy-middleware": "^0.17.4",
     "ion-rangeslider": "^2.1.4",
+    "linkifyjs": "^2.1.4",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.3",
     "mdi": "^1.6.50",
@@ -38,12 +43,19 @@
     "react-addons-transition-group": "^15.5.2",
     "react-addons-update": "^15.5.2",
     "react-autobind": "^1.0.6",
-    "react-dom": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
+    "react-dom": "^15.6.0",
+    "react-draggable": "^2.2.6",
     "react-masonry-component": "^5.0.7",
     "react-mounter": "^1.2.0",
     "react-slick": "^0.14.11",
+    "react-style-proptype": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
+    "react-test-renderer": "^15.5.4",
     "react-transition-group": "^1.2.0",
+    "reactcss": "^1.2.2",
     "slug": "^0.9.1",
     "throttle-debounce": "^1.0.1",
     "twit": "^2.2.4"
