--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-runtime": "^6.22.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.17.2",
+    "bson": "^1.0.4",
     "draft-js": "^0.10.1",
     "draft-js-export-html": "^0.5.4",
     "draft-js-inline-toolbar-plugin": "^2.0.0-beta6",
