--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-draggable": "^2.2.6",
     "react-masonry-component": "^5.0.7",
     "react-mounter": "^1.2.0",
+    "react-player": "^0.19.0",
     "react-slick": "^0.14.11",
     "react-style-proptype": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
