--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "reactcss": "^1.2.2",
     "slug": "^0.9.1",
     "throttle-debounce": "^1.0.1",
-    "twit": "^2.2.4"
+    "twit": "^2.2.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
