--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^15.6.0",
     "react-draggable": "^2.2.6",
     "react-masonry-component": "^5.0.7",
+    "react-media-player": "^0.6.3",
     "react-mounter": "^1.2.0",
     "react-player": "^0.19.0",
     "react-slick": "^0.14.11",
